--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000</color>
     <!--<color name="colorAccent">#FF4081</color>-->
     <color name="colorAccent">#337AB7</color>
+    <color name="colorLink">#F47D67</color>
 </resources>
