--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--QVGA 480x320-->
+    <dimen name="activity_login_horizontal_margin">20dp</dimen>
+    <dimen name="small_link">14sp</dimen>
+    <dimen name="big_link">16sp</dimen>
 </resources>
