Arrumando GET pra preencher spinner de cidades

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="colorAccent">#337AB7</color>
     <color name="colorLink">#F47D67</color>
     <color name="err_msg">#D50000</color>
+
+    <!--SnackBar-->
+    <color name="snackBackgroundError">#992222</color>
+    <color name="snackBackgroundSuccess">#48AA48</color>
+    <color name="snackBackgroundInfo">#555</color>
 </resources>
