--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -10,16 +11,16 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilName"
@@ -47,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="4dp"
-                    android:hint="@string/hint_email"
+                    android:hint="@string/hint_email_required"
                     android:inputType="textEmailAddress" />
             </android.support.design.widget.TextInputLayout>
 
@@ -62,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="4dp"
-                    android:hint="@string/hint_password"
+                    android:hint="@string/hint_password_required"
                     android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
@@ -105,11 +106,11 @@
 
             <TextView
                 android:id="@+id/tvRgErrMessage"
-                android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/err_msg_must_select_one"
                 android:textColor="@color/err_msg"
+                android:textSize="12sp"
                 android:visibility="gone" />
 
             <RadioGroup
@@ -138,28 +139,43 @@
                 android:text="@string/hint_state"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/tvSpStateErrMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/err_msg_must_select_state"
+                android:textColor="@color/err_msg"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
             <Spinner
                 android:id="@+id/spState"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:entries="@array/array_states"
-                android:inputType="textCapWords" />
+                android:entries="@array/array_states" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/hint_city"
+                android:text="@string/hint_city_required"
                 android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tvSpCityErrMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/err_msg_must_select_city"
+                android:textColor="@color/err_msg"
+                android:textSize="12sp"
+                android:visibility="gone" />
 
             <Spinner
                 android:id="@+id/spCity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:inputType="textCapWords"
-                android:prompt="@string/hint_city" />
+                android:layout_marginBottom="4dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilPhone"
@@ -168,59 +184,98 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/etPhone"
-                    android:maxLength="14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="4dp"
                     android:hint="@string/hint_phone"
-                    android:inputType="phone" />
+                    android:inputType="phone"
+                    android:maxLength="14" />
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tilSite"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/etSite"
-                    android:layout_width="match_parent"
+                <EditText
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="4dp"
-                    android:hint="@string/hint_site"
-                    android:inputType="text" />
-            </android.support.design.widget.TextInputLayout>
+                    android:enabled="false"
+                    android:text="@string/lb_site" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tilFacebook"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilSite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/etSite"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginTop="4dp"
+                        android:hint="@string/hint_site"
+                        android:inputType="textUri" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/etFacebook"
-                    android:layout_width="match_parent"
+                <EditText
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="4dp"
-                    android:hint="@string/hint_facebook"
-                    android:inputType="text" />
-            </android.support.design.widget.TextInputLayout>
+                    android:enabled="false"
+                    android:text="@string/lb_facebook" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tilTwitter"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilFacebook"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/etFacebook"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginTop="4dp"
+                        android:hint="@string/hint_facebook"
+                        android:inputType="textUri" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/etTwitter"
-                    android:layout_width="match_parent"
+                <EditText
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="4dp"
-                    android:hint="@string/hint_twitter"
-                    android:inputType="text" />
-            </android.support.design.widget.TextInputLayout>
+                    android:enabled="false"
+                    android:text="@string/lb_twitter" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilTwitter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/etTwitter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginTop="4dp"
+                        android:hint="@string/hint_twitter"
+                        android:inputType="textUri" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btSingup"
